[package]
name = "kanata_window_layer_switcher"
Description = "Kanata TCP client that listenes for a LayerChange event to a special layer name, and then sends a ChangeLayer command to Kanata to switch layer based on active window's name."
version = "1.0.0"
edition = "2021"
license = "LGPL-3.0"
authors = ["jtroo <j.andreitabs@gmail.com>", "wis mr@wis.am"]

[dependencies]
anyhow = "1"
clap = { version = "3", features = [ "derive" ] }
log = "0.4.8"
simplelog = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
active-win-pos-rs = "0.8"


[workspace]
members = []
